[gd_scene load_steps=12 format=3 uid="uid://c1t0msehhfmh"]

[ext_resource type="Texture2D" uid="uid://doxojjbkt7ev6" path="res://assets/art/menus/Animatedv2.png" id="1_14a6c"]
[ext_resource type="Script" path="res://menus/neverknow_splash.gd" id="2_12677"]
[ext_resource type="Texture2D" uid="uid://mfbfcl8xq1uk" path="res://assets/art/menus/wolfenrahd_splash.png" id="3_5dugi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wbthm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dirxk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fyx7c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kgvbu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w34hf"]

[sub_resource type="Animation" id="Animation_pyx5l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_sclfl"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wfjgi"]
_data = {
"RESET": SubResource("Animation_pyx5l"),
"default": SubResource("Animation_sclfl")
}

[node name="neverknow_splash" type="TextureRect"]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_14a6c")
expand_mode = 5
script = ExtResource("2_12677")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="easter_egg_button" type="Button" parent="."]
layout_mode = 0
offset_left = 738.0
offset_top = 285.0
offset_right = 1164.0
offset_bottom = 663.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_wbthm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dirxk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fyx7c")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kgvbu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w34hf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_5dugi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wfjgi")
}
autoplay = "default"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="easter_egg_button" to="." method="_on_easter_egg_button_pressed"]
